# SelectiveSSM

./: README.md  pyproject.toml  requirements.txt  s6_runner.ipynb  setup.py
s6_core/: layer_norm.py  models.py  selective_scan_interface.py
