[project]
name = "s6-core"
description = "Repository that implements the s6 functions of mamba model."
version = "1.0"
authors = [
    {name = "Lucas Benedetti", email = "contato.lucasbenedetti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/benedettilucas/SelectiveSSM"

[tool.setuptools.packages.find]
include = ["s6_core*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}